--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -5,10 +5,15 @@ Show them when they receive the class 'on'
 Hide them when they receive the class 'off'
 Feel free to adjust the defaults to your needs.
 ********************************************** */
+body{
+    background-color: black;
+     display: flex;
+}
 #closed-captions p {
 	opacity: 0;
 	transition: .05s;
 	position: absolute;
+    
 }
 #closed-captions .on {
 	opacity: 1;
@@ -18,9 +23,214 @@ Feel free to adjust the defaults to your needs.
 	opacity: 0;
 }
 .voice1 {
-	font-style: italic;
+font-family: "Brenner Sans";
+font-style: Italic;
+font-weight: 200;
 }
 
+.voice2 {
+font-family: "Brenner Sans Condensed";
+font-style: Italic;
+font-weight: 800;
+}
+
+.voice3 {
+font-family: "Brenner Sans Condensed";
+font-style: Italic;
+font-weight: 400;
+}
+
+#video-placeholder{
+ position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    border: 1em;
+    z-index: 1;
+   
+}
+.sound0 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em white;
+}
+.sound1 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em yellow;
+}
+.sound2 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em blue;
+}
+.sound3 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em red;
+}
+.sound4 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em white;
+}
+.sound5 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em yellow;
+}
+.sound6 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em red;
+}
+.sound7 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em white;
+}
+.sound8 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em yellow;
+}
+.sound5 h1{
+    transition: .2s;
+    opacity: 1;
+}
+.sound5 h2{
+    transition: 1.5s;
+    opacity: 1;
+}
+.sound5 h3{
+    transition: 2s;
+    opacity: 1;
+}
+h1{
+    opacity: 0;
+     color: orange;
+    font-size: 200px;
+    transform: rotate(90deg);
+    margin-top: 20%;
+    margin-left: 70%;
+    
+}
+h2{
+    font-size: 200px;
+    transform: rotate(90deg);
+    margin-top: 20%;
+    margin-left: 70%;
+    color: greenyellow;
+    z-index: 1;
+}
+h3{
+   opacity: 0;
+     color: white;
+    z-index: 1;
+}
+.sound9 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em red;
+    animation: tril1 1.3s linear 4 forwards;
+    animation-delay: 0.6s;
+}
+.sound10 iframe{
+    transition: .5s;
+    animation: shake 1s;
+}
+.sound11 iframe{
+    transition: .5s;
+    filter: blur(5px);
+    box-shadow: 0em 0em 14em #F900F9;
+}
+.sound12 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em red;
+    filter: blur(0px);
+}
+.sound13 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em blue;
+}
+.sound14 iframe{
+    transition: .5s;
+    box-shadow: 0em 0em 14em red;
+}
+.sound15 iframe{
+    transition: 1s;
+    box-shadow: 0em 0em 14em yellow;
+}
+
+
+
+#closed-captions p{
+    opacity: 0;
+    transition: .05s;
+    color: white;
+    position: absolute;
+    bottom: 10%;
+    text-align: center;
+    left: 50%;
+    transform: translate(-50%); 
+}
+
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-100px, 0, 0) translate(-50%,-50%);
+  }
+  
+  20%, 80% {
+    transform: translate3d(200px, 0, 0) translate(-50%,-50%);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-400px, 0, 0) translate(-50%,-50%);
+  }
+
+  40%, 60% {
+    transform: translate3d(400px, 0, 0) translate(-50%,-50%);
+  }
+}
+
+@keyframes tril1{
+    0%{
+        box-shadow: 0em 0em 14em red;
+        
+    }
+    10%{
+        box-shadow: 0em 0em 2em red;
+        
+    }
+    20%{
+        box-shadow: 0em 0em 4em red;
+        
+    }
+    30%{
+        box-shadow: 0em 0em 2em red;
+        
+    }
+    40%{
+        box-shadow: 0em 0em 4em red;
+        
+    }
+    }
+    50%{
+        box-shadow: 0em 0em 2em red;
+        
+    }
+        }
+    70%{
+        box-shadow: 0em 0em 4em red;
+        
+    }
+    }
+    80%{
+        box-shadow: 0em 0em 2em red;
+        
+    }
+    }
+    90%{
+        box-shadow: 0em 0em 4em red;
+        
+    }
+    }
+    100%{
+        box-shadow: 0em 0em 6em red;
+        
+    }
+}
 /* **********************************************
 The first paragraph, with extended timing for 
 	all siblings. Basically what it does is that
@@ -29,10 +239,9 @@ The first paragraph, with extended timing for
 	spoken.
 You probably want to change the styling.
 ********************************************** */
-
 .p0 span {
 	opacity: 0;
-	font-family: brenner;
+	
 }
 .p0.on span:first-of-type {
 	opacity: 1;
@@ -45,53 +254,171 @@ You probably want to change the styling.
 	margin-right: -.25em;
 	font-weight: 400;
 }
-.p0.on span:nth-of-type(3) {
+.p1 span {
+	opacity: 0;
+	
+}
+.p1.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+	
+}
+.p1.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .4s;
+
+}
+.p1.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s 1s;
+	
+
+}
+.p1.on span:nth-of-type(4) {
+	opacity: 1;
+	transition: 0s 1.2s;
+	
+}
+.p1.on span:nth-of-type(5) {
+	opacity: 1;
+	transition: 0s 1.3s;
+	
+}
+
+.p1.on span:nth-of-type(6) {
+	opacity: 1;
+	transition: 0s 1.4s;
+	
+}
+
+.p1.on span:nth-of-type(7) {
+	opacity: 1;
+	transition: 0s 1.7s;
+	
+}
+
+
+
+.p2 span {
+	opacity: 0;
+	
+}
+.p2.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+	
+}
+.p2.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .4s;
+
+}
+.p2.on span:nth-of-type(3) {
 	opacity: 1;
 	transition: 0s .5s;
 	margin-right: -.25em;
-	font-weight: 600;
+
 }
-.p0.on span:nth-of-type(4) {
+.p2.on span:nth-of-type(4) {
 	opacity: 1;
 	transition: 0s .7s;
 	margin-right: -.25em;
-	font-weight: 800;
 }
-.p0.on span:nth-of-type(5) {
+
+.p2.on span:nth-of-type(5) {
 	opacity: 1;
 	transition: 0s 1.1s;
-	margin-right: -.25em;
-	font-family: "brenner sans";
 }
-.p0.on span:nth-of-type(6) {
+	
+.p2.on span:nth-of-type(6) {
 	opacity: 1;
 	transition: 0s 1.4s;
-	margin-right: -.25em;
-	font-family: "brenner display";
+
 }
-.p0.on span:nth-of-type(7) {
+.p2.on span:nth-of-type(7) {
 	opacity: 1;
 	transition: 0s 1.7s;
-	margin-right: -.25em;
-	font-family: "brenner script";
+	
 }
+
+.p3 span {
+	opacity: 0;
+	
+}
+.p3.on span:first-of-type {
+	opacity: 1;
+	transition: 0s;
+	
+}
+.p3.on span:nth-of-type(2) {
+	opacity: 1;
+	transition: 0s .4s;
+
+}
+.p3.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .5s;
+	margin-right: -.25em;
+
+}
+.p3.on span:nth-of-type(4) {
+	opacity: 1;
+	transition: 0s .7s;
+	margin-right: -.25em;
+}
+
+.p3.on span:nth-of-type(5) {
+	opacity: 1;
+	transition: 0s 1.1s;
+}
+	
+.p3.on span:nth-of-type(6) {
+	opacity: 1;
+	transition: 0s 1.4s;
+
+}
+.p3.on span:nth-of-type(7) {
+	opacity: 1;
+	transition: 0s 1.7s;
+	
+}
+
 .p0.on span:nth-of-type(8) {
 	opacity: 1;
 	transition: 0s 2s;
 	font-family: "brenner script";
 }
-.p0.on span:nth-of-type(9) {
-	opacity: 1;
-	transition: 0s 3s;
-	font-family: "brenner Sans condensed";
+.p14 span {
+	opacity: 0;
+	font-family: brenner;
 }
-.p0.on span:nth-of-type(10) {
+.p14.on span:first-of-type {
 	opacity: 1;
-	transition: 0s 3.2s;
-	font-family: "brenner mono";
+	transition: 0s;
+    height: 20%;
+    font-family: "Brenner Sans Condensed";
+font-style: Normal;
+font-weight: 200;
 }
-.p0.on span:nth-of-type(11) {
+.p14.on span:nth-of-type(2) {
 	opacity: 1;
-	transition: 0s 3.7s;
-	font-family: "brenner slab";
+	transition: 0s .4s;
+	margin-right: -.25em;
+	font-weight: 400;
+    font-family: "Brenner Sans Condensed";
+font-style: Italic;
+
+}
+.p14.on span:nth-of-type(3) {
+	opacity: 1;
+	transition: 0s .5s;
+	margin-right: -.25em;
+	font-family: "Brenner Sans Condensed";
+font-style: Italic;
+font-weight: 800;
+}
+
+
+p{
+    font-size: 3em;
 }
