--- a/closed-captions/css.css
+++ b/closed-captions/css.css
@@ -1299,6 +1299,7 @@ font-weight: 200;}
 .p28.on span:first-of-type {
 	opacity: 1;
 	transition: .0s;
+    font-size: 80px;
 	
 }
 .p28.on span:nth-of-type(2) {
